--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                         <a class="nav-link" href="avisos.html">Avisos</a>
                         <a class="nav-link" href="sobremi.html">Sobre mí</a>
-                        <a class="nav-link" href="materias20205.html">Materias 2025</a>
+                        <a class="nav-link" href="materias2025.html">Materias 2025</a>
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
         <h3>Cronograma Primer Cuatrimestre 2025</h3>
 
         <!-- Tabla de materias -->
-        <div class="contenedor-tabla">
+        <div class="contenedor-tabla table-responsive">
             <table class="table">
                 <thead class="tabla-materias">
                     <tr>
