--- a/materias2025.html
+++ b/materias2025.html
@@ -39,57 +39,18 @@
 
     <!-- MAIN -->
     <main class="contenido-principal">
-      <h2>Avisos</h2>
-        <h3>Tareas pendientes</h3>
-          <div class="tareas-pendientes">
-            <!-- Lista de teareas pendientes -->
-
-             <div class="materia">
-              <h4>Introducción a la algoritmia</h4>
-              <ul>
-                <li>28 / 04 Primer Parcial </li>
-                <li>Repasar guía de ejercicios</li>
-                <li>Resumir última clase</li>
-              </ul>
-            </div>
-
-            <div class="materia">
-            <h4>Sistemas de Información</h4>
-            <ul>
-              <li>28 / 04 Primer Parcial</li>            
-              <li>12 / 05 Preparar presentación del TPO</li>
-            </ul>
-            </div>
-
-            <div class="materia">
-            <h4>Diseño y Desarrollo Web</h4>
-            <ul>
-              <li>29 / 05 Parcial</li>
-              <li>Hacer todas las actividades entregables</li>
-              <li>Repasar teoría para el parcial</li>
-            </ul>
+        <h2>Materias 2025</h2>
+        <h3>Listado de materias - Primer cuatrimestre 2025</h3>
+          <!-- Lista de materias -->
+          <div class="materias-listado">
+          <ul>
+              <li>Introducción a la algoritmia</li>
+              <li>Sistemas de Información I</li>
+              <li><a href="diseño-y-desarrollo.html">Diseño y desarrollo Web</a></li>
+              <li>Marketing</li>
+              <li>Arquitectura de computadores</li>
+          </ul>
           </div>
-
-            <div class="materia">
-            <h4>Marketing</h4>
-            <ul>
-              <li>30 / 04 Parcial</li>
-              <li>Terminar resumen y repasar</li>
-            </ul>
-          </div>
-
-            <div class="materia">
-            <h4>Arquitectura de computadores</h4>
-            <ul>
-              <li> 24 / 04 Parcial </li>
-              <li>Ver videos explicativos del PPT</li>
-              <li>Practicar ejercitación de números binarios</li>
-            </ul>
-          </div>
-
-          </div>
-
-        
     </main>
 
     <!-- FOOTER: Pie de página -->
@@ -99,7 +60,7 @@
       <p>Todo el contenido presente en esta página, incluyendo textos, imágenes y código, es propiedad intelectual de su autor, salvo que se indique lo contrario.</p>
       <p>Todos los derechos reservados.</p>
       <p>Está prohibida la reproducción total o parcial de este sitio sin autorización previa.</p>
-  </footer>
+    </footer>
 
 </body>
 </html>
